; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_memb.c_memb_alloc.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_memb.c_memb_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.memb_blks = type { i64, i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @memb_alloc(%struct.memb_blks* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.memb_blks*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  store %struct.memb_blks* %0, %struct.memb_blks** %3, align 8
  %6 = load %struct.memb_blks*, %struct.memb_blks** %3, align 8
  %7 = getelementptr inbounds %struct.memb_blks, %struct.memb_blks* %6, i32 0, i32 2
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to i64*
  store i64* %9, i64** %5, align 8
  store i64 0, i64* %4, align 8
  br label %10

10:                                               ; preds = %38, %1
  %11 = load i64, i64* %4, align 8
  %12 = load %struct.memb_blks*, %struct.memb_blks** %3, align 8
  %13 = getelementptr inbounds %struct.memb_blks, %struct.memb_blks* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp slt i64 %11, %14
  br i1 %15, label %16, label %41

16:                                               ; preds = %10
  %17 = load i64*, i64** %5, align 8
  %18 = load i64, i64* %17, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %27

20:                                               ; preds = %16
  %21 = load i64*, i64** %5, align 8
  %22 = load i64, i64* %21, align 8
  %23 = add nsw i64 %22, 1
  store i64 %23, i64* %21, align 8
  %24 = load i64*, i64** %5, align 8
  %25 = getelementptr inbounds i64, i64* %24, i64 1
  %26 = bitcast i64* %25 to i8*
  store i8* %26, i8** %2, align 8
  br label %42

27:                                               ; preds = %16
  %28 = load i64*, i64** %5, align 8
  %29 = bitcast i64* %28 to i32*
  %30 = bitcast i32* %29 to i64*
  %31 = load %struct.memb_blks*, %struct.memb_blks** %3, align 8
  %32 = getelementptr inbounds %struct.memb_blks, %struct.memb_blks* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  %34 = call i32 @MEM_ALIGN_SIZE(i32 %33)
  %35 = sext i32 %34 to i64
  %36 = add i64 %35, 8
  %37 = getelementptr inbounds i64, i64* %30, i64 %36
  store i64* %37, i64** %5, align 8
  br label %38

38:                                               ; preds = %27
  %39 = load i64, i64* %4, align 8
  %40 = add nsw i64 %39, 1
  store i64 %40, i64* %4, align 8
  br label %10

41:                                               ; preds = %10
  store i8* null, i8** %2, align 8
  br label %42

42:                                               ; preds = %41, %20
  %43 = load i8*, i8** %2, align 8
  ret i8* %43
}

declare dso_local i32 @MEM_ALIGN_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
